--- a/Home/index.html
+++ b/Home/index.html
@@ -35,7 +35,6 @@ end image -->
 
     <!-- AOS Animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    
   </head>
   <body>
     <!-- Header -->
@@ -61,16 +60,17 @@ end image -->
     <!-- Home -->
     <section class="home">
       <div class="home-text" data-aos="fade-up">
-        <h6>New Arrivals</h6>
+        <h6>Top Picks</h6>
         <h1>
-          New Arrivsls <br />
-          ready to rock
+          Best Phones <br />
+          Just for You
         </h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio
-          voluptas repellat dolore doloremque sit vel, accusamus adipisci magni
-          facere illum necessitatibus pariatur, ipsa consequatur debitis.
+          Explore the newest smartphones on the market. Whether you're looking
+          for cutting-edge technology or the best value for your money, Pricely
+          has the perfect phone for you. Upgrade today!
         </p>
+
         <a href="#" class="btn"
           >Shop Now <i class="ri-arrow-right-line"></i>
         </a>
@@ -114,9 +114,9 @@ end image -->
       <div class="n-content" data-aos="zoom-in">
         <div class="row">
           <div class="row-img">
-            <img src="" alt="" />
+            <img src="pixel9pro.avif" alt="" />
           </div>
-          <h3>T-shirt with tape details</h3>
+          <h3>Pixel 9 Pro</h3>
           <div class="stars">
             <a href="#"><i class="ri-star-fill"></i></a>
             <a href="#"><i class="ri-star-fill"></i></a>
@@ -140,9 +140,9 @@ end image -->
 
         <div class="row">
           <div class="row-img">
-            <img src="" alt="" />
+            <img src="pixel9pro.avif" alt="" />
           </div>
-          <h3>T-shirt with tape details</h3>
+          <h3>Pixel 9 Pro</h3>
           <div class="stars">
             <a href="#"><i class="ri-star-fill"></i></a>
             <a href="#"><i class="ri-star-fill"></i></a>
@@ -166,9 +166,9 @@ end image -->
 
         <div class="row">
           <div class="row-img">
-            <img src="" alt="" />
+            <img src="pixel9pro.avif" alt="" />
           </div>
-          <h3>T-shirt with tape details</h3>
+          <h3>Pixel 9 Pro</h3>
           <div class="stars">
             <a href="#"><i class="ri-star-fill"></i></a>
             <a href="#"><i class="ri-star-fill"></i></a>
@@ -192,9 +192,9 @@ end image -->
 
         <div class="row">
           <div class="row-img">
-            <img src="" alt="" />
+            <img src="pixel9pro.avif" alt="" />
           </div>
-          <h3>T-shirt with tape details</h3>
+          <h3>Pixel 9 Pro</h3>
           <div class="stars">
             <a href="#"><i class="ri-star-fill"></i></a>
             <a href="#"><i class="ri-star-fill"></i></a>
@@ -218,9 +218,9 @@ end image -->
 
         <div class="row">
           <div class="row-img">
-            <img src="" alt="" />
+            <img src="pixel9pro.avif" alt="" />
           </div>
-          <h3>T-shirt with tape details</h3>
+          <h3>Pixel 9 Pro</h3>
           <div class="stars">
             <a href="#"><i class="ri-star-fill"></i></a>
             <a href="#"><i class="ri-star-fill"></i></a>
@@ -244,9 +244,9 @@ end image -->
 
         <div class="row">
           <div class="row-img">
-            <img src="" alt="" />
+            <img src="pixel9pro.avif" alt="" />
           </div>
-          <h3>T-shirt with tape details</h3>
+          <h3>Pixel 9 Pro</h3>
           <div class="stars">
             <a href="#"><i class="ri-star-fill"></i></a>
             <a href="#"><i class="ri-star-fill"></i></a>
@@ -270,9 +270,9 @@ end image -->
 
         <div class="row">
           <div class="row-img">
-            <img src="" alt="" />
+            <img src="pixel9pro.avif" alt="" />
           </div>
-          <h3>T-shirt with tape details</h3>
+          <h3>Pixel 9 Pro</h3>
           <div class="stars">
             <a href="#"><i class="ri-star-fill"></i></a>
             <a href="#"><i class="ri-star-fill"></i></a>
@@ -296,9 +296,9 @@ end image -->
 
         <div class="row">
           <div class="row-img">
-            <img src="" alt="" />
+            <img src="pixel9pro.avif" alt="" />
           </div>
-          <h3>T-shirt with tape details</h3>
+          <h3>Pixel 9 Pro</h3>
           <div class="stars">
             <a href="#"><i class="ri-star-fill"></i></a>
             <a href="#"><i class="ri-star-fill"></i></a>
@@ -487,7 +487,7 @@ end image -->
     <script>
       AOS.init({
         offset: 300,
-        duration: 1450, 
+        duration: 1450,
       });
     </script>
   </body>
